--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ design/
 README-template.md
 README.md
 style-guide.md
+.gitignore
 # Avoid accidental XD upload if you convert the design file
 ###############################################
 ## Please do not remove line 12 - thanks! 🙂 ##
